--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"error\" && exit 1 ",
-    "start": "nodemon index.js",
+    "start": "node index.js",
     "install": "node_modules/.bin/bower install"
   },
   "author": "1312432 1312479",
