--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"error\" && exit 1 ",
-    "start": "node index.js",
+    "start": "nodemon index.js",
     "install": "node_modules/.bin/bower install"
   },
   "author": "1312432 1312479",
@@ -15,8 +15,10 @@
     "bower": "^1.8.0",
     "dotenv": "^4.0.0",
     "express": "^4.15.2",
+    "express-fileupload": "^0.1.3",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.2",
+    "multer": "^1.3.0",
     "node-session": "^1.2.1",
     "pg": "^6.1.5",
     "pg-connection-string": "^0.1.3",
